# repo-team-mapper

./: .env.example  README.md  pyproject.toml
src/repo_team_mapper/: api_client.py  config.py  entity_processor.py  main.py  map_relation_to_team.py  processor.py
tests/: test_api_client.py  test_team_search.py
