[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "repo_team_mapper"
version = "0.1.0"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A tool to map GitHub repositories to teams in Port."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "python-dotenv",
    "PyGithub",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-mock",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = [
  "src"
] 